<resources>

    <string name="app_name">SecureImage</string>
    <string name="email">Email</string>
    <string name="email_lowercase">email</string>
    <string name="gov_bc_ca">\@gov.bc.ca</string>
    <string name="login">Login</string>
    <string name="create_album">Create Album</string>
    <string name="back">Back</string>
    <string name="album_name">Album Name</string>
    <string name="upload">Upload</string>
    <string name="add_image">Add Image</string>
    <string name="add_images">Add Images</string>
    <string name="view_all_images">View all Images</string>
    <string name="all_images">All Images</string>
    <string name="take_image">Take image</string>
    <string name="flash_off">Flash off</string>
    <string name="flash_on">Flash on</string>
    <string name="flash_auto">Flash auto</string>
    <string name="delete_album">Delete Album</string>
    <string name="delete_album_info">This album and all it\'s content will be deleted off this device forever. Are you sure you want to delete?</string>
    <string name="cancel">Cancel</string>
    <string name="delete_device_album">Delete Device Album</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="select">Select</string>
    <string name="delete">Delete</string>
    <string name="select_items">Select items</string>
    <string name="select_mode">Select mode</string>
    <string name="albums">Albums</string>
    <string name="add_an_album_name">Add an album name</string>
    <string name="album">Album</string>
    <string name="hello_comma">Hello,</string>
    <string name="onboarding_info">Welcome to the Secure Image App. This page is where all of your albums will be located.\n\nIn order to create a new Album, simply tap on the Create Album button below to get started.\n\nOnce you are within the create album screen, you have the option to take an image or annotate your album. Changes you make to your album will be saved automatically.</string>
    <string name="delete_images">Delete Images</string>
    <string name="delete_images_info">Are you sure you want to delete your selected images?</string>
    <string name="delete_image">Delete Image</string>
    <string name="delete_image_info">Are you sure you want to delete this image?</string>
    <string name="deleting">Deleting…</string>
    <string name="uploading">Uploading…</string>
    <string name="upload_anyway">Upload Anyway</string>
    <string name="mobile_data">Mobile Data</string>
    <string name="you_are_currently_offline">You are currently offline</string>
    <string name="no_connection_info">Please connect to a network to upload your album</string>
    <string name="close">Close</string>
    <string name="mobile_data_warning_info">You are currently connected to mobile data. Uploading images can require a large amount of data affecting your cellular data plan.</string>
    <string name="deleted_successfully">Deleted Successfully</string>
    <string name="mobile_connection">Mobile Connection</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="album_deleted">Album Deleted</string>
    <string name="image_deleted">Image deleted</string>
    <string name="authenticate">Authenticate</string>
    <string name="authentication_info_message">This app may contain sensitive information so we require that you use your device\'s local authentication to gain access</string>
    <string name="device_not_secured">App requires a pin, pattern, or password setup on your phone</string>
    <string name="note_something_down_for_later">Note something down for later</string>
    <string name="comments">Comments</string>

</resources>
