<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/deleteAlbumTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/delete_device_album"
            android:textColor="@color/red"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/deleteAlbumInfoTv"
            android:text="@string/delete_album_info"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/deleteAlbumTitleTv"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/cancelTv"
            android:text="@string/cancel"
            android:textColor="@color/darkGray"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:background="?attr/selectableItemBackground"
            android:padding="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/deleteAlbumInfoTv"
            app:layout_constraintRight_toLeftOf="@+id/deleteForeverTv"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/deleteForeverTv"
            android:text="@string/delete_album"
            android:textColor="@color/red"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:background="?attr/selectableItemBackground"
            android:padding="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/deleteAlbumInfoTv"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</RelativeLayout>