<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.bc.gov.secureimage.screens.allimages.AllImagesActivity">

    <!-- Toolbar -->
    <View
        android:id="@+id/toolbarBackgroundView"
        android:background="@color/colorPrimary"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:id="@+id/backIv"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_arrow_back_black_24dp"
        android:tint="@color/white"
        android:padding="16dp"
        android:layout_width="56dp"
        android:layout_height="56dp"
        app:layout_constraintTop_toTopOf="@+id/toolbarBackgroundView"
        app:layout_constraintLeft_toLeftOf="@+id/toolbarBackgroundView"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarBackgroundView"/>

    <TextView
        android:id="@+id/toolbarTitleTv"
        android:text="@string/all_images"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/toolbarBackgroundView"
        app:layout_constraintLeft_toLeftOf="@+id/toolbarBackgroundView"
        app:layout_constraintRight_toRightOf="@+id/toolbarBackgroundView"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarBackgroundView"/>
    
    <TextView
        android:id="@+id/selectTv"
        android:text="@string/select"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        app:layout_constraintTop_toTopOf="@+id/toolbarBackgroundView"
        app:layout_constraintRight_toRightOf="@+id/toolbarBackgroundView"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarBackgroundView"/>
    
    <!-- Select Toolbar -->
    <ImageView
        android:id="@+id/toolbarSelectCloseIv"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_close_black_24dp"
        android:tint="@color/white"
        android:padding="16dp"
        android:layout_width="56dp"
        android:layout_height="56dp"
        app:layout_constraintTop_toTopOf="@+id/toolbarBackgroundView"
        app:layout_constraintLeft_toLeftOf="@+id/toolbarBackgroundView"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarBackgroundView"/>

    <TextView
        android:id="@+id/toolbarSelectTitleTv"
        android:text="@string/select_items"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/toolbarBackgroundView"
        app:layout_constraintLeft_toLeftOf="@+id/toolbarBackgroundView"
        app:layout_constraintRight_toRightOf="@+id/toolbarBackgroundView"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarBackgroundView"/>

    <!-- Images List -->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/imagesRv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingBottom="88dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbarBackgroundView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <!-- Delete -->
    <TextView
        android:id="@+id/deleteTv"
        android:text="@string/delete"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:background="@drawable/shape_rect_color_primary_light_solid_rounded"
        android:gravity="center"
        android:layout_margin="16dp"
        android:layout_width="200dp"
        android:layout_height="56dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <!-- Loading -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbarBackgroundView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>
