<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:background="@color/colorPrimary"
    tools:context="ca.bc.gov.secureimage.screens.login.LoginActivity">

    <ImageView
        android:id="@+id/logoIv"
        android:src="@drawable/ic_bc_logo"
        android:scaleType="fitCenter"
        android:contentDescription="@null"
        android:layout_width="128dp"
        android:layout_height="128dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/emailEt"/>

    <TextView
        android:text="@string/email"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:fontFamily="@font/open_sans_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/emailEtBottomView"
        app:layout_constraintBottom_toTopOf="@+id/govBcCaTv"/>

    <EditText
        android:id="@+id/emailEt"
        android:hint="@string/email"
        android:textColorHint="@color/lightGray"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:fontFamily="@font/open_sans_regular"
        android:background="@null"
        android:inputType="textEmailAddress"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/govBcCaTv"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/govBcCaTv"
        android:text="@string/gov_bc_ca"
        android:textColor="@color/lightGray"
        android:textSize="14sp"
        android:fontFamily="@font/open_sans_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/emailEt"
        app:layout_constraintLeft_toRightOf="@+id/emailEt"
        app:layout_constraintRight_toRightOf="parent"/>

    <View
        android:id="@+id/emailEtBottomView"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/emailEt"
        app:layout_constraintLeft_toLeftOf="@+id/emailEt"
        app:layout_constraintRight_toRightOf="@+id/emailEt"/>

    <TextView
        android:id="@+id/logInTv"
        android:text="@string/login"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:fontFamily="@font/open_sans_bold"
        android:elevation="8dp"
        android:gravity="center"
        android:background="@drawable/shape_rect_color_primary_light_rounded_28dp"
        android:layout_margin="32dp"
        android:layout_width="200dp"
        android:layout_height="56dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>
